--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,20 @@
             </a>
      <a href="#" class="header__link">Все направления</a>   
     </header>
+    <div class="container">
+        <div class="banner">
+            <div class="banner__main">
+                <h1 class="banner__title">Обучение игре на электрогитаре</h1>
+                <div class="banner__box banner-box">
+                <h2 class="banner-box__title">О направлении</h2>
+                <p class="banner-box__text">Вы научитесь играть на электрогитаре под чутким руководством преподавателя, даже если раньше никогда не держали электрогитару в руках. С нами возможно всё!</p>
+                <img src="./images/areas/electroguitar.png" alt="">
+    </div>
+<button class="bunner__btn" type="button">Записаться</button>
+            </div>
+                <div class="banner__info">   
+          </div>  
+        </section>
+    </div>
 </body>
 </html>
