--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
                 <div class="banner__box banner-box">
                 <h2 class="banner-box__title">О направлении</h2>
                 <p class="banner-box__text">Вы научитесь играть на электрогитаре под чутким руководством преподавателя, даже если раньше никогда не держали электрогитару в руках. С нами возможно всё!</p>
-                <img src="./images/areas/electroguitar.png" alt="">
+                <img class="banner-box__img _electroguitar" src="./images/areas/electroguitar.png" alt="">
     </div>
-<button class="bunner__btn" type="button">Записаться</button>
+<button class="banner__btn" type="button">Записаться</button>
             </div>
                 <div class="banner__info">   
           </div>  
