--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,21 @@
     <div class="container">
         <div class="banner">
             <div class="banner__main">
-                <h1 class="banner__title">Обучение игре на электрогитаре</h1>
+            <h1 class="banner__title">Обучение игре на электрогитаре</h1>
                 <div class="banner__box banner-box">
-                <h2 class="banner-box__title">О направлении</h2>
-                <p class="banner-box__text">Вы научитесь играть на электрогитаре под чутким руководством преподавателя, даже если раньше никогда не держали электрогитару в руках. С нами возможно всё!</p>
-                <img class="banner-box__img _electroguitar" src="./images/areas/electroguitar.png" alt="">
+            <h2 class="banner-box__title">О направлении</h2>
+            <p class="banner-box__text">Вы научитесь играть на электрогитаре под чутким руководством преподавателя, даже если раньше никогда не держали электрогитару в руках. С нами возможно всё!</p>
+            <img class="banner-box__img _electroguitar" src="./images/areas/electroguitar.png" alt="">
     </div>
 <button class="banner__btn" type="button">Записаться</button>
             </div>
-                <div class="banner__info">   
+                <div class="banner__info"> 
+                <div class="banner__item">
+                    <p>Когда: <span>01 апреля - 28 июня</span></p>
+                    <div class="banner__decor">
+                    <img src="./images/banner-icons/calendar.svg" alt="">
+                </div>      
+          </div>
           </div>  
         </section>
     </div>
