--- a/src/index.html
+++ b/src/index.html
@@ -25,13 +25,37 @@
     </div>
 <button class="banner__btn" type="button">Записаться</button>
             </div>
-                <div class="banner__info"> 
-                <div class="banner__item">
-                    <p>Когда: <span>01 апреля - 28 июня</span></p>
+                <div class="banner__info">
+                    <div class="banner__item">
+                    <p class="banner__text" <p>Когда: <span>01 апреля - 28 июня</span></p>
                     <div class="banner__decor">
                     <img src="./images/banner-icons/calendar.svg" alt="">
-                </div>      
+                    </div>
+                    </div>
+                        <div class="banner__item">
+                        <p class="banner__text">Формат: <span>Офлайн</span></p>
+                        <div class="banner__decor">
+                        <img src="./images/banner-icons/wifi.svg" alt="">
+                    </div>
+                    </div>
+                    <div class="banner__item">
+                        <p class="banner__text">Для кого: <span>Для взрослых</span></p>
+                        <div class="banner__decor">
+                        <img src="./images/banner-icons/adult.svg" alt="">
+                    </div>
+                    </div>
+                    <div class="banner__item">
+                        <p class="banner__text">Стоимость: <span>3000 р</span></p>
+                        <div class="banner__decor">
+                        <img src="./images/banner-icons/wallet.svg" alt="">
+                    </div>
+                    </div>
+                
+
+                
           </div>
+
+
           </div>  
         </section>
     </div>
