--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
             </div>
                 <div class="banner__info">
                     <div class="banner__item">
-                    <p class="banner__text" <p>Когда: <span>01 апреля - 28 июня</span></p>
+                    <p class="banner__text"></p>Когда: <span>01 апреля - 28 июня</span></p>
                     <div class="banner__decor">
                     <img src="./images/banner-icons/calendar.svg" alt="">
                     </div>
@@ -50,12 +50,7 @@
                         <img src="./images/banner-icons/wallet.svg" alt="">
                     </div>
                     </div>
-                
-
-                
-          </div>
-
-
+                </div>
           </div>  
         </section>
     </div>
