--- a/src/index.html
+++ b/src/index.html
@@ -106,14 +106,36 @@
             <img class="slider-teacher__img" src="./images/teacher/03.png" alt="">
             <p class="slider-teacher__name">Никита Власов</p>
         </div>
-
     </div>
-    
-</div>
+ </div>
 <div class="course__schedule">
- </div>   
+    <div class="accordion">
+       <button class="accordion__btn">Программа обучения</button>
+        <div class="accordion__panel" style="max-height: inherit;">
+        <ul class="accordion__list">
+            <li class="accordion__item">Знакомство с электрогитарой</li>
+            <li class="accordion__item">Возьмите её в руки</li>
+            <li class="accordion__item">Верный спутник: Усилитель</li>
+            <li class="accordion__item">Аккорды</li>
+            <li class="accordion__item">Техника игры правой рукой</li>
+            <li class="accordion__item">Основа игры на соло-гитаре</li>
+            <li class="accordion__item">Мастерство риффа</li>
+        </ul>
+       </div>
+    </div>
+  </div>   
     </div>
     </div>
 </div>
+    <section class="steps">
+        <div class="container">
+           <h2 class="title">
+        <div class="steps__list">
+            <div class="steps__item">
+       </div>
+        </div>
+           </h2> 
+        </div>
+    </section>
 </body>
 </html>
