--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="banner">
             <div class="banner__main">
-                <div><h1 class="banner__title">Обучение игре на электрогитаре</h1>
+                <div><h1 class="banner__title">Обучение игре на&nbsp;электрогитаре</h1>
                     <div class="banner__box banner-box">
                 <h2 class="banner-box__title">О направлении</h2>
                 <p class="banner-box__text">Вы научитесь играть на электрогитаре под чутким руководством преподавателя, даже если раньше никогда не держали электрогитару в руках. С нами возможно всё!</p>
@@ -127,15 +127,29 @@
     </div>
     </div>
 </div>
+
     <section class="steps">
         <div class="container">
-           <h2 class="title">
+           <h2 class="title-h2">Как проходит обучение?</h2>
         <div class="steps__list">
             <div class="steps__item">
-       </div>
+                <img src="./images/UI/pencil.svg" alt="" class="steps__icon">
+                <p class="steps__text">Оставляете заявку и наш менеджер перезванивает вам, чтобы назначить день встречи с преподавателем</p>
+                </div>
+            <div class="steps__item">
+                    <img src="./images/UI/graduate.svg" alt="" class="steps__icon">
+                    <p class="steps__text">В день встречи с преподавателем он&nbsp;оценивает ваш уровень навыков, если ранее вы пробовали играть</p>
+            </div>
+            <div class="steps__item">
+                <img src="./images/UI/steps.svg" alt="" class="steps__icon">
+                <p class="steps__text">Преподаватель составляет индивидуальную программу обучения и график занятий</p>
         </div>
-           </h2> 
+        <div class="steps__item">
+            <img src="./images/UI/guitar.svg" alt="" class="steps__icon">
+            <p class="steps__text">Начинаете обучение, чтобы после&nbsp;стать мастером игры на&nbsp;электрогитаре!</p>
+         </div>
         </div>
-    </section>
+        </div>
+        </section>
 </body>
 </html>
